# chemistry-scaling-benchmark

./: .gitignore  CLAUDE.md  README.md  benchmark_chemistry.py  chemistry_tradeoff.py  generate_small_molecules.py  pyproject.toml  trillium.sh  trillium_cpu.sh  trillium_gpu.sh
calculators/: base_calculator.py  pyscf_calculator.py  rdkit_calculator.py  xtb_calculator.py
datagen/: extend_dataset.py  fetch_molecules.py  generate_small_molecules.py
results/: results_600.csv  results_600_old.csv  test_results.csv
scripts/: benchmark_chemistry.py  figure_tradeoff.py  plot_scaling.py
utils/: results_writer.py  timeout_runner.py  xyz_parser.py
xyz_structures/: fetch_pdb_structures.py  fill_gaps.py  molecule_001atoms_1.xyz  molecule_002atoms_1.xyz  molecule_003atoms_1.xyz  molecule_003atoms_2.xyz  molecule_003atoms_3.xyz  molecule_004atoms.xyz  molecule_004atoms_2.xyz  molecule_005atoms.xyz  molecule_005atoms_2.xyz  molecule_005atoms_3.xyz  molecule_006atoms.xyz  molecule_006atoms_2.xyz  molecule_007atoms.xyz  molecule_007atoms_2.xyz  molecule_007atoms_3.xyz  molecule_007atoms_4.xyz  molecule_008atoms.xyz  molecule_008atoms_2.xyz  molecule_009atoms_1.xyz  molecule_009atoms_2.xyz  molecule_0100atoms.xyz  molecule_010atoms.xyz  molecule_010atoms_1.xyz  molecule_0110atoms.xyz  molecule_011atoms_1.xyz  molecule_011atoms_2.xyz  molecule_0120atoms.xyz  molecule_012atoms_1.xyz  molecule_012atoms_2.xyz  molecule_012atoms_3.xyz  molecule_0130atoms.xyz  molecule_013atoms_1.xyz  molecule_013atoms_2.xyz  molecule_0140atoms.xyz  molecule_014atoms_1.xyz  molecule_014atoms_2.xyz  (+91 more)
