[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaling"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "seaborn",
    "pillow",
    "numpy",
    "tqdm",
    "rdkit==2025.9.3",
    "pyscf",
    "xtb",
    "psutil",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["calculators*", "utils*", "datagen*"]
