[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaling"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "seaborn",
    "pillow",
    "numpy",
    "tqdm",
    "rdkit==2025.9.3",
    "pyscf",
    "xtb",
    "typing_extensions",
    "psutil",
    "requests",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["calculators*", "utils*", "datagen*"]
